[package]
name = "nesoli-gallery"
version = "0.1.0"
edition = "2024"
description = "NesOli Gallery — high-performance photography asset service (Rust/Axum)"

[dependencies]
axum       = "0.7"
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["trace"] }
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Wired in Day 9 (Metadata to Database)
# sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

[profile.release]
opt-level = 3
strip = true
