[package]
name = "nesoli-gallery"
version = "0.1.0"
edition = "2024"
description = "NesOli Gallery — high-performance photography asset service (Rust/Axum)"

[dependencies]
axum            = "0.7"
tokio           = { version = "1", features = ["full"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
tower-http      = { version = "0.6", features = ["trace"] }
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify          = "6"
kamadak-exif    = "0.5"
mime_guess      = "2"
uuid            = { version = "1", features = ["v4", "serde"] }
sqlx            = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
tokio-util      = { version = "0.7", features = ["io"] }
chrono          = { version = "0.4", features = ["serde"] }
aws-sdk-s3      = "1"
aws-config      = { version = "1", features = ["behavior-version-latest"] }

[profile.release]
opt-level = 3
strip = true
